Fix project card on safari

--- a/src/layout/components/ProjectModalCard/style.scss
+++ b/src/layout/components/ProjectModalCard/style.scss
@@ -3,7 +3,7 @@
 
 .project-modal-card {
   background: #fff;
-  box-shadow: 0 0 0 9999rem rgba(216, 208, 208, 0.5);
+  box-shadow: 0 0 0 9999rem rgba(50, 50, 50, 0.5);
   height: 80%;
   left: max(5vw, calc(50vw - 35rem));
   overflow-x: hidden;
